--- a/src/pages/demos.pug
+++ b/src/pages/demos.pug
@@ -6,38 +6,38 @@ block content
   h3 🎞️ 1 year later @ CppCon 2018 (Bellevue/WA, US)
   p “Better Tools in Your Clang Toolbox”
     a(href="https://www.youtube.com/watch?v=4X_fZkl7kkU")
-    img(src="https://img.youtube.com/vi/4X_fZkl7kkU/0.jpg",alt="") Clang Power Tools
+    img(src="https://img.youtube.com/vi/4X_fZkl7kkU/0.jpg",alt="")
   h3 🎞️ C++ Weekly with 
     em Jason Turner  (featuring 
     em Clang Power Tools )
   p Ep 101 - “Learning Modern C++”: 
     em The Tools
     a(href="https://www.youtube.com/watch?v=zMrP8heIz3g")
-    img(src="https://img.youtube.com/vi/zMrP8heIz3g/0.jpg",alt="") Clang Power Tools
+    img(src="https://img.youtube.com/vi/zMrP8heIz3g/0.jpg",alt="")
   p Ep 102 - “Learning Modern C++”: 
     em Hello World
     a(href="https://www.youtube.com/watch?v=juJaaCf_yKc")
-    img(src="https://img.youtube.com/vi/juJaaCf_yKc/0.jpg",alt="") Clang Power Tools
+    img(src="https://img.youtube.com/vi/juJaaCf_yKc/0.jpg",alt="")
   p Ep 103 - “Learning Modern C++”: 
     em Inheritance
     a(href="https://www.youtube.com/watch?v=43qyUASBeUc")
-    img(src="https://img.youtube.com/vi/43qyUASBeUc/0.jpg",alt="") Clang Power Tools
+    img(src="https://img.youtube.com/vi/43qyUASBeUc/0.jpg",alt="")
   p Ep 104 - “Learning Modern C++”: 
     em const and constexpr
     a(href="https://www.youtube.com/watch?v=UYEyHlynkPc")
-    img(src="https://img.youtube.com/vi/UYEyHlynkPc/0.jpg",alt="") Clang Power Tools
+    img(src="https://img.youtube.com/vi/UYEyHlynkPc/0.jpg",alt="")
   p Ep 105 - “Learning Modern C++”: 
     em Looping and Algorithms
     a(href="https://www.youtube.com/watch?v=A0-x-Djey-Q")
-    img(src="https://img.youtube.com/vi/A0-x-Djey-Q/0.jpg",alt="") Clang Power Tools
+    img(src="https://img.youtube.com/vi/A0-x-Djey-Q/0.jpg",alt="")
   h3 🎞️ Community build-up @ Meeting C++ Berlin, 2017
   p “Clang Power Tools: More Clang-tidy Magic”
     a(href="https://www.youtube.com/watch?v=BAkdRY9l5pI")
-    img(src="https://img.youtube.com/vi/BAkdRY9l5pI/0.jpg",alt="") Clang Power Tools
+    img(src="https://img.youtube.com/vi/BAkdRY9l5pI/0.jpg",alt="")
   h3 🎞️ Official launch @ CppCon 2017 (Bellevue/WA, US)
   p “Bringing Clang-tidy Magic to Visual Studio C++ Developers”
     a(href="https://www.youtube.com/watch?v=Wl-9ozmxXbo")
-    img(src="https://img.youtube.com/vi/Wl-9ozmxXbo/0.jpg",alt="") Clang Power Tools
+    img(src="https://img.youtube.com/vi/Wl-9ozmxXbo/0.jpg",alt="")
   h2 🎙️ Podcasts
   h3 🔊 CppCast interview with 
     a(href="http://twitter.com/ciura_victor") Victor Ciura , about Clang Power Tools
