Fix links in main page.

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -13,12 +13,12 @@ block content
   p Works with Visual Studio 2015 / 2017
   h3 Version History
   p
-    a(href="CHANGELOG.md") Release Notes
+    a(href="CHANGELOG.html") Release Notes
   p How Clang Power Tools came to be: 
-    a(href="about.md") About
+    a(href="about.html") About
   h3 Features
   p 🎞️ 
-    a(href="demos.md") Video Showcase
+    a(href="demos.html") Video Showcase
   p 📜 
     strong Poster CppCon 2018  - 
     a(href="https://github.com/CppCon/CppCon2018/raw/master/Posters/retrofit_cpp17_to_large_visual_studio_codebases/retrofit_cpp17_to_large_visual_studio_codebases__gabriel_diaconita__cppcon_2018.pdf") Retrofit C++17 to large Visual Studio codebases
@@ -50,7 +50,7 @@ block content
     strong Custom clang-tidy wildcard checks
   p
     img(src="images/VSTidyChecksWildcard.PNG",alt="")
-  p 🆕 Built-in support for 
+  p 🆕 Built-in support for  
     strong
     a(href="https://clang.llvm.org/docs/ClangFormat.html") clang-format Auto-format source file on save, configurable 
     a(href="https://clang.llvm.org/docs/ClangFormatStyleOptions.html") style options , file extension rules, etc.
@@ -72,7 +72,7 @@ block content
     a(href="https://www.microsoft.com/en-us/download/details.aspx?id=34595") PowerShell 3.0  (already available on Windows 10)
   h3 Tips / Q & A
   p
-    a(href="QaA.md") Tips and Frequently asked questions
+    a(href="QaA.html") Tips and Frequently asked questions
   h3 Feedback
   p If you have any suggestions or feedback about Clang Power Tools, or if you encounter any issues with your projects, please submit 
     a(href="https://github.com/Caphyon/clang-power-tools/issues") here .
