--- a/ClangPowerTools/ClangPowerTools/MVVM/Views/GeneralSettingsView.xaml
+++ b/ClangPowerTools/ClangPowerTools/MVVM/Views/GeneralSettingsView.xaml
@@ -15,11 +15,12 @@
       <ImageBrush ImageSource="/ClangPowerTools;component/Resources/SettingsBackground.png" Stretch="UniformToFill" />
     </Grid.Background>
     <Grid.RowDefinitions>
-      <RowDefinition Height="40" />
-      <RowDefinition Height="60" />
-      <RowDefinition Height="60" />
-      <RowDefinition Height="60" />
-      <RowDefinition Height="60" />
+      <RowDefinition Height="30" />
+      <RowDefinition Height="50" />
+      <RowDefinition Height="50" />
+      <RowDefinition Height="50" />
+      <RowDefinition Height="50" />
+      <RowDefinition Height="50" />
       <RowDefinition Height="*" />
     </Grid.RowDefinitions>
 
@@ -69,9 +70,20 @@
       Content="Logout"
       FontSize="16" />
 
+    <!--  Upgrade  -->
+    <Button
+      Grid.Row="5"
+      Grid.Column="0"
+      Width="180"
+      Height="40"
+      Background="#FFFFC05E"
+      Command="{Binding LogoutCommand}"
+      Content="Upgrade"
+      FontSize="16" />
+
     <!--  Version  -->
     <TextBlock
-      Grid.Row="5"
+      Grid.Row="6"
       Grid.Column="0"
       HorizontalAlignment="Right"
       VerticalAlignment="Bottom"
